force-app/main/default/objects/BaseURL__c/BaseURL__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Base URLs</label>
</CustomObject>