force-app/main/default/objects/BaseURL__c/fields/My_Domain_URL__c.field-meta.xml
<CustomField>
    <fullName>My_Domain_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>My Domain URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>