force-app/main/default/objects/BaseURL__c/fields/Org_URL__c.field-meta.xml
<CustomField>
    <fullName>Org_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Org URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>