force-app/main/default/objects/BaseURL__c/fields/Portal_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_Base_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Portal Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>